--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -41,7 +41,7 @@ a.disabled,a:link.disabeled,a:visited.disabled
 	background:#fff;
 	overflow:hidden;
 	position:relative;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 /* MESSAGES *********************************/
@@ -291,10 +291,9 @@ section#info p
 }
 
 /* MAIN SECTION  ******************************/
-.main
+section#main, .main
 {
 	margin-top:1em;
-
 }
 
 section[role="main"],section[role="complementary"]
@@ -384,6 +383,11 @@ nav.pagination
 {
 	margin:0;
 	padding:0;
+}
+
+.no-result {
+    background: #fff url(../images/bg-cows.jpg) no-repeat top left;
+    margin: -20px 0 0 0;
 }
 
 /* FACETS section *******************************/
@@ -630,6 +634,7 @@ button.fg-button-icon-right .ui-icon {
 /* FOOTER ******************************/
 footer
 {
+    /*background: #ddddd0;*/
 	display:block;
 	margin:1em 0 0;
 	min-height:50px;
@@ -795,7 +800,7 @@ table caption
 	background:#ddddd0;
 	display:none;
 	font-weight:400;
-	thfont-size:1.1em;
+	font-size:1.1em;
 }
 
 th,td
