--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -16,6 +16,20 @@ body.ninesixty .container_12
 	width:960px;
 }
 
+.centered
+{
+	text-align:center;
+}
+
+.container_12
+{
+	background:#fff;
+	overflow:hidden;
+	position:relative;
+}
+
+/* HYPERLINKS *******************************/
+
 a:link
 {
 	color:#369;
@@ -31,19 +45,22 @@ a.disabled,a:link.disabeled,a:visited.disabled
 	color:#ccc !important;
 }
 
-.centered
+#userBar a:link,
+#userBar a:visited,
+#search a,
+a.fg-button:active,
+a.fg-button.ui-state-active
 {
-	text-align:center;
+	color:#fff;
 }
 
-.container_12
+#result_view_select a:link,
+#result_view_select a:visited,
+.facets_container a:link,
+.facets_container a:visited
 {
-	background:#fff;
-	overflow:hidden;
-	position:relative;
-    /*height: 100%;*/
+	text-decoration:none;
 }
-
 /* MESSAGES *********************************/
 #messages
 {
@@ -86,6 +103,11 @@ a.disabled,a:link.disabeled,a:visited.disabled
 	background:#c00;
 }
 
+#message.notification
+{
+    background:#336699;
+}
+
 /* HEADER/BRANDING *********************************/
 h1#branding
 {
@@ -112,7 +134,7 @@ div#header
 	position:relative;
 }
 
-/* HOME *************************************/
+/* HEADER HOME *************************************/
 div#header.home
 {
 	background:#fff url(../images/bg-houses.jpg) no-repeat center center;
@@ -144,6 +166,7 @@ section#info p
 	padding:0 1em;
 }
 
+/* SLIDESHOW *****************************************/
 .slideshow {
     height: 232px;
     width: 232px;
@@ -167,7 +190,7 @@ section#info p
     -webkit-border-radius: 10px;
 }
 
-/* USERBAR **********************************/
+/* USERBAR **************************************/
 #userBar
 {
 	background:#69c;
@@ -270,6 +293,11 @@ section#info p
 	display:inline;
 }
 
+#search form
+{
+	padding: .5em;
+}
+
 #formSimpleSearch input
 {
 	-moz-border-radius:4px;
@@ -354,6 +382,7 @@ nav.pagination
 	margin:.5em 0 1em;
 }
 
+/* RESULTS TABLE *****************************/
 #results table,#itemMetaData table
 {
 	margin:0;
@@ -369,14 +398,19 @@ nav.pagination
     margin-bottom: 1em;
 }
 
-.results .brief-thumb-container,.results .brief-thumb-container-listview,.results #img-full
+.results .brief-thumb-container,
+.results .brief-thumb-container-listview,
+.results #img-full
 {
 	overflow:hidden;
     margin-right: .5em;
 	text-align:center;
 }
 
-.results .brief-thumb-container img,.results .brief-thumb-container-listview img,.results .related-thumb-container img,#itemImage img
+.results .brief-thumb-container img,
+.results .brief-thumb-container-listview img,
+.results .related-thumb-container img,
+#itemImage img
 {
 	-moz-box-shadow:1px 1px 2px #BBB;
 	border:4px solid #FFF;
@@ -384,11 +418,14 @@ nav.pagination
 
 .results .brief-content-container
 {
-	min-height:75px;
+	/*min-height:75px;*/
 	padding:1em .5em;
 
 }
 
+.results h6 {
+    margin: 0;
+}
 .results ul
 {
 	list-style-type:none;
@@ -578,7 +615,8 @@ table .item
 }
 
 /* remove extra button width in IE */
-button.fg-button,input.fg-button
+button.fg-button,
+input.fg-button
 {
 	overflow:visible;
 	width:auto;
@@ -622,7 +660,8 @@ button.fg-button-icon-right .ui-icon
 	width:8px;
 }
 
-.fg-buttonset-single .fg-button,.fg-buttonset-multi .fg-button
+.fg-buttonset-single .fg-button,
+.fg-buttonset-multi .fg-button
 {
 	margin-right:-1px;
 }
@@ -934,11 +973,11 @@ table.zebra tbody tr:nth-child(even) td
 }
 
 /* SQUASH TABLE */
-
 table.squash {margin: 0;}
 table.squash tbody td {padding:.5em 0 0 0; font-size: .85em}
 
 
+/* CODE & WYSIWYG VIEWS **************************/
 #editor-controls
 {
 	border-bottom:1px solid #ccc;
@@ -948,34 +987,22 @@ table.squash tbody td {padding:.5em 0 0 0; font-size: .85em}
 	padding:.5em 0;
 }
 
-body#tinymce,body#mceTemplatePreview,.results,td
+body#tinymce,
+body#mceTemplatePreview,
 {
 	background:#fff;
 }
 
-.inner,#search form
+/* HELPER CLASSES */
+
+.inner
 {
 	padding: .5em;
 }
 
-#userBar ul,.results h6
-{
-	margin:0;
-}
-
-#userBar a:link,#userBar a:visited,#search a,a.fg-button:active,a.fg-button.ui-state-active
-{
-	color:#fff;
-}
-
-/*td .ui-icon,#result_count,a.fg-button,.fg-buttonset .fg-button*/
 td .ui-icon
 {
 	float:left;
 }
 
-#result_view_select a:link,#result_view_select a:visited,.facets_container a:link,.facets_container a:visited
-{
-	text-decoration:none;
-}
 
