type tabs ui-state-active styling

--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -394,6 +394,11 @@ section[role="main"],section[role="complementary"]
     font-weight: normal;
 }
 
+#type-tabs li.ui-state-active a span {
+    color: #ccffff;
+    font-weight: normal;
+}
+
 /* RESULTS ************************************/
 #result_sort,#result_view_select
 {
