--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -447,6 +447,25 @@ nav.pagination
 	border:4px solid #FFF;
 }
 
+.results.checkerboard tr:nth-child(odd) td:nth-child(odd) {
+    background: #eee;
+}
+.results.checkerboard tr:nth-child(even) td:nth-child(even) {
+    background: #eee;
+}
+.results.checkerboard tr:nth-child(odd) td:nth-child(even) .brief-thumb-container img{
+   	-moz-box-shadow:1px 1px 2px #BBB;
+	border:4px solid #eee;
+}
+.results.checkerboard tr:nth-child(even) td:nth-child(odd) .brief-thumb-container img{
+   	-moz-box-shadow:1px 1px 2px #BBB;
+	border:4px solid #eee;
+}
+
+.results.zebra tr:nth-child(even) .brief-thumb-container img{
+   	-moz-box-shadow:1px 1px 2px #BBB;
+    border:4px solid #eee;
+}
 .results .brief-content-container
 {
 	/*min-height:75px;*/
