--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -518,7 +518,7 @@ nav#facetList
 /* FACETS TOGGLER *******************************/
 h4.trigger
 {
-	background:url(../images/togglerch.gif) no-repeat 5px 8px;
+	background:url(../images/toggleroh.gif) no-repeat 5px 8px;
 	border-bottom:1px solid #ccc;
 	font-size:1em;
 	margin:0;
@@ -533,7 +533,7 @@ h4.trigger .ui-icon
 
 h4.trigger:hover
 {
-	background:url(../images/togglerc.gif) no-repeat 5px 8px;
+	background:url(../images/togglero.gif) no-repeat 5px 8px;
 	color:#ccc;
 }
 
@@ -543,14 +543,14 @@ h4.trigger a
 	text-decoration:none;
 }
 
-h4.active
+h4.closed
 {
-	background:url(../images/toggleroh.gif) no-repeat 5px 8px;
+	background:url(../images/togglerch.gif) no-repeat 5px 8px;
 }
 
-h4.active:hover
+h4.closed:hover
 {
-	background:url(../images/togglero.gif) no-repeat 5px 8px;
+	background:url(../images/togglerc.gif) no-repeat 5px 8px;
 }
 
 .facets_container
