forgot-password request page, error messages using js showMessage() translation added for 'Email address not registered'

--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -111,16 +111,19 @@ a.fg-button.ui-state-active
 #messages.success
 {
 	background:#693;
+    color: #555
 }
 
 #messages.fail,#messages.error
 {
 	background:#c00;
+    color: #555
 }
 
 #message.notification
 {
     background:#336699;
+    color: #555
 }
 
 /* OTHER NOTIFICATIONS *****************************/
