temp fix for utf-8 encoding facet links various html5 validation fixes

--- a/portal/src/main/webapp/theme/norvegiana/css/screen.css
+++ b/portal/src/main/webapp/theme/norvegiana/css/screen.css
@@ -374,7 +374,7 @@ li.jcarousel-item {
 	vertical-align:middle;
 }
 
-#formSimpleSearch input[type="query"]
+#formSimpleSearch input[type="text"]
 {
 	background:#fff;
 	border:1px solid #bbb;
